--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tqdm = "^4.65.0"
 xmltodict = "^0.13.0"
 internetarchive = "^3.5.0"
 slugify = "^0.0.1"
+typing-extensions = "^4.7.1"
 
 
 [build-system]
