--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ xmltodict = "^0.13.0"
 internetarchive = "^3.5.0"
 slugify = "^0.0.1"
 typing-extensions = "^4.7.1"
+python-dateutil = "^2.8.2"
 
 
 [build-system]
