--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ internetarchive = "^3.5.0"
 slugify = "^0.0.1"
 typing-extensions = "^4.7.1"
 python-dateutil = "^2.8.2"
+pillow = "^10.0.0"
 
 
 [build-system]
