--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ python-dateutil = "^2.8.2"
 pillow = "^10.0.0"
 
 
+[tool.poetry.group.dev.dependencies]
+sphinx = "^7.0.1"
+furo = "^2023.5.20"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
