ci(github): add make target

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           pip install sphinx
           cd docs
-          make
+          make html
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.7
