--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,19 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-requests = "^2.31.0"
 backoff = "^2.2.1"
-tqdm = "^4.65.0"
 xmltodict = "^0.13.0"
 internetarchive = "^3.5.0"
 typing-extensions = "^4.7.1"
 python-dateutil = "^2.8.2"
-pillow = "^10.0.0"
 python-slugify = "^8.0.1"
+requests = "^2.32.3"
+tqdm = "^4.67.1"
+pillow = "10.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.7.0"
+black = {extras = ["jupyter"], version = "^25.1.0"}
 
 [build-system]
 requires = ["poetry-core"]
